# vibetunnel

./: .dockerignore  .env.example  .gitignore  BONJOUR_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  FEATURE_SPEC_TERMINAL_THEMES.md  LOC_Analysis.md  Package.swift  README.md  SCREENCAP_FIXES.md  SECURITY_ANALYSIS.md  SECURITY_REVIEW_PR460.md  THEME_TESTING_GUIDE.md  TICKETS.md  check-tab-properties.applescript  docs.json  keyboard-event-handling-analysis.md  mint.json  package-lock.json  test-session-id-matching.sh  test-themes-direct.js  test-themes-simple.js  test-themes.js
.claude/: settings.local.json
VibeTunnel/: VibeTunnelApp.swift
VibeTunnelTests/: BasicAuthMiddlewareTests.swift  DashboardKeychainTests.swift  ServerManagerTests.swift  SessionIdHandlingTests.swift  SessionMonitorTests.swift  TTYForwardManagerTests.swift
docs/: CONTRIBUTING.md  INDEX.md  RELEASE_PROCESS.md  SCREEN_RECORDING_PERMISSION.md  agent-web-interface-spec.md  arch-mario.md  authentication.md  cjk-ime-input.md  gemini.md  hq.md  keyboard-shortcuts.md  mario_debugging_session_technical_extract.md  org-migrate.md  screencap.md  websocket-architecture-analysis.md  worktree.md
ios/: CLAUDE.md  Makefile  run-tests-xcode.sh
mac/: .release-state.json  .web-content-hash  CHANGELOG.md  CLAUDE.md  Package.swift  build_output2.txt  screencap-interface.html  screenshare-fix-plan.md  screenshare-investigation.md  test-screencap-browser.html  (+3 more)
mac-frontend/: .gitignore  .swiftlint.yml  DEVELOPMENT.md  Package.swift  README.md
terminal-forwarder/: Cargo.toml
terminal-forwarder/src/: main.rs
(+1368 files in other folders)
